--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
         <!-- =====ICONS ===== -->
         <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
+        <link rel="header icon" href="/icon.ico" type="image/x-icon">
 
         <title>Personal Portfolio | Symer</title>
     </head>
