--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                         <div class="works__img">
                             <img src="assets/img/work2.jpg" alt="">
                             <div class="works__data">
-                                <a target="_blank" href="" class="works__link"><i class='bx bx-link'></i></a>
+                                <a target="_blank" href="https://web-portfolio-symer.netlify.app/" class="works__link"><i class='bx bx-link'></i></a>
                                 <span class="works__title">Web Profile</span>
                             </div>
                         </div>
